--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "font-awesome": "^4.7.0",
     "sass": "^1.54.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
