--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials
+deploy_key
+deploy_key.pub
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
 /node_modules
+
+test.rb
